hphp/test/slow/hhbbc/option_type_hint_001.php.expectf

Catchable fatal error: Argument 1 to Foo::__construct() must be of type ?Foo, int given in %s/slow/hhbbc/option_type_hint_001.php on line 12
